tests/compile-fail/if-precidence.sk
fn bar() {
    z = 1 + if true { 2 } else { 3 }
}