tests/compile-fail/if-precidence.stderr
error: Unexpected token
  ┌─ /home/nixon/git/skate/./tests/compile-fail/if-precidence.sk:2:7
  │
2 │     z = 1 + if true { 2 } else { 3 }
  │       ^
  │
  = Expected: "!="
  = Expected: "&&"
  = Expected: "("
  = Expected: ")"
  = Expected: "*"
  = Expected: "+"
  = Expected: ","
  = Expected: "-"
  = Expected: "."
  = Expected: "/"
  = Expected: ";"
  = Expected: "<"
  = Expected: "<="
  = Expected: "=="
  = Expected: ">"
  = Expected: ">="
  = Expected: "["
  = Expected: "]"
  = Expected: "{"
  = Expected: "||"
  = Expected: "}"

